# Echo

./: .gitignore  Homepage.py  signup.py  startingScreen.py  templateTK.py  users.csv
Echo/: .gitignore  CMakeLists.txt  about.cpp  about.h  about.ui  budgeting.cpp  budgeting.h  budgeting.ui  expenses.cpp  expenses.csv  expenses.h  expenses.ui  features.cpp  features.h  features.ui  homepage.cpp  homepage.h  homepage.ui  icons.qrc  income  income.cpp  income.csv  income.h  income.ui  logoImage  main.cpp  report.cpp  report.h  report.ui  signin.cpp  signin.h  signin.ui  signup.cpp  signup.h  signup.ui  soon.cpp  soon.h  soon.ui  startscreen.cpp  startscreen.h  (+2 more)
build-Echo-Qt_6_2_4_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-Echo-Qt_6_2_4_for_macOS-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-14cae7ecf36619658370.json  codemodel-v2-05612b6e485c91d5b5b0.json  codemodel-v2-a205db3b49b94510aad6.json  codemodel-v2-d759a40b07529c45fcaf.json  codemodel-v2-f3941f9bef52c9422aaa.json  index-2023-11-08T21-05-40-0036.json  index-2023-11-24T13-53-19-0571.json  target-Echo-Debug-554a093483fdb98807a1.json  target-Echo-Debug-5b6ef129c6e6197003bc.json  target-Echo-Debug-ed3812547dbb0a836db2.json  target-Echo-Debug-f69f24eeacfdb8d1c43c.json  (+1 more)
build-Echo-Qt_6_2_4_for_macOS-Debug/Echo.app/Contents/: Info.plist
build-Echo-Qt_6_2_4_for_macOS-Debug/Echo.app/Contents/MacOS/: Echo
build-Echo-Qt_6_2_4_for_macOS-Debug/Echo_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-Echo-Qt_6_2_4_for_macOS-Debug/Echo_autogen/EWIEGA46WW/: moc_about.cpp  moc_about.cpp.d  moc_budgeting.cpp  moc_budgeting.cpp.d  moc_expenses.cpp  moc_expenses.cpp.d  moc_features.cpp  moc_features.cpp.d  moc_homepage.cpp  moc_homepage.cpp.d  moc_income.cpp  moc_income.cpp.d  moc_report.cpp  moc_report.cpp.d  moc_signin.cpp  moc_signin.cpp.d  moc_signup.cpp  moc_signup.cpp.d  moc_soon.cpp  moc_soon.cpp.d  moc_startscreen.cpp  moc_startscreen.cpp.d  qrc_icons.cpp
build-Echo-Qt_6_2_4_for_macOS-Debug/Echo_autogen/include/: ui_about.h  ui_budgeting.h  ui_expenses.h  ui_features.h  ui_homepage.h  ui_income.h  ui_report.h  ui_signin.h  ui_signup.h  ui_soon.h  ui_startscreen.h
database/: budget.csv  expenses.csv  income.csv  users.csv
(+7 files in other folders)
